2013-09-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_hppa-cpu.c: Correct code to call a function stored
	in a register or a patched function address.

2013-09-10 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ia64-cpu.c: Correct incorrect logic when restoring
	the value of the "r2" callee save register.

2013-08-29 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm-cpu.c, lib/jit_arm.c: Correct wrong test and update
	of the thumb offset information, when checking if needing to
	patch a jump from arm to thumb mode. The problem would happen when
	remapping the code buffer, and the new address being lower than
	the previous one.

2013-08-26 Paulo Andrade <pcpa@gnu.org>

	* configure.ac: Extend FreeBSD test to also handle NetBSD.

	* lib/jit_x86-cpu.c: Correct wrongly defined offset type of
	ldxi_ui. Problem detected when building on NetBSD.

	* lib/lightning.c: Adjust code to handle NetBSD mremap,
	where arguments do not match Linux mremap.

2013-08-26 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ppc.c: Correct C sequence point problem miscalculating
	the actual function address in a function descriptor. Problem
	happens with gcc 4.8.1 at least.

2013-08-11 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_s390x-cpu.c: Correct code checking if immediate
	fits instruction, but using the negated value.

2013-07-28 Paulo Andrade <pcpa@gnu.org>

	* include/lightning/jit_s390x.h, lib/jit_s390x-cpu.c,
	lib/jit_s390x-fpu.c, lib/jit_s390x.c: New files
	implementing the new s390x port.

	* configure.ac, include/lightning.h,
	include/lightning/Makefile.am,
	include/lightning/jit_private.h,
	lib/Makefile.am, lib/jit_disasm.c, lib/lightning.c:
	Minor adaptation for the new s390x backend.

	* check/float.tst: Update for the s390x result of
	truncating +Inf to integer.

	* check/qalu_mul.tst: Add extra test cases to better test
	high word of signed multiplication as the result is
	adjust from unsigned multiplication on s390x.

2013-07-28 Paulo Andrade <pcpa@gnu.org>
